<resources>
    <string name="app_name">MyWeather</string>
    <string name="title_activity_main">MyWeather</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="add_location">Add Location</string>
    <string name="add">Add</string>
    <string name="location_added">Added Location: %s</string>
    <string name="location_removed">Removed Location: %s</string>
    <string name="settings_fragment_text">Settings Fragment</string>
</resources>
