<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/home_dest">
    <fragment
        android:id="@+id/home_dest"
        android:name="com.codetest.myweather.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_add_location"
            app:destination="@id/add_location_dest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_settings"
            app:destination="@id/settings_dest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_help"
            app:destination="@id/help_dest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_city"
            app:destination="@id/city_dest"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/settings_dest"
        android:name="com.codetest.myweather.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" />

    <fragment
        android:id="@+id/city_dest"
        android:name="com.codetest.myweather.CityFragment"
        android:label="@string/location"
        tools:layout="@layout/city_fragment">
        <argument android:name="cityLocation"
            app:argType="com.codetest.myweather.room.CityLocation" />
    </fragment>
    <fragment
        android:id="@+id/help_dest"
        android:name="com.codetest.myweather.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/help_fragment" />
    <fragment
        android:id="@+id/add_location_dest"
        android:name="com.codetest.myweather.AddLocationFragment"
        android:label="@string/add_location"
        tools:layout="@layout/add_location_fragment"/>
</navigation>
